--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="color topLeft">
-        <h2>Eat</h2>
+        <button class="imageButton">
+            <img id="donutIcon" src="./Icons/donut_pixel art.png" alt="Botón">
+        </button>
+        <h2 class="leftText">Eat</h2>
     </div>
     <div class="color topRight">
-        <h2>Play</h2>
+        <h2 class="rightText">Play</h2>
     </div>
     <div class="color downLeft">
-        <h2>Figth</h2>
+        <h2 class="leftText">Fight</h2>
     </div>
     <div class="color downRight">
-        <h2>Sleep</h2>
+        <h2 class="rightText">Sleep</h2>
     </div>
-    
+    <img id="idles" src="./animations/dragonInitialIde.gif" alt="">
 </body>
 <script src="./jquery-3.7.1.min.js"></script>
 </html>
