--- a/index.html
+++ b/index.html
@@ -24,10 +24,19 @@
                 <img id="eatIcons" src="./Icons/meatball.png" alt="Botón">
             </button>
         </div>
-        
+
     </div>
     <div class="color topRight">
         <h2 class="rightText">Play</h2>
+        <div class="playButtons">
+            <button>
+                <img id="playIcons" src="./Icons/game_controller.png" alt="">
+            </button>
+            <button>
+                <img id="playIcons" src="./Icons/rubik's_cube.png" alt="">
+            </button>
+
+        </div>
     </div>
     <div class="color downLeft">
         <h2 class="leftText">Fight</h2>
@@ -35,8 +44,10 @@
     <div class="color downRight">
         <h2 class="rightText">Sleep</h2>
     </div>
+    <img id="mark" src="./Icons/mark.png" alt="">
     <img id="idles" src="./animations/dragonInitialIde.gif" alt="">
 </body>
 <script src="./jquery-3.7.1.min.js"></script>
+<script src="./main.js"></script>
 
 </html>
