--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="color topLeft">
         <h2 class="leftText">Eat</h2>
         <div class="eatButtons">
-            <button class="eatB donutButton">
-                <img id="eatIcons" src="./Icons/donut_pixel art.png" alt="Botón">
+            <button class="eatB donutButton" data-gif-src="./animations/dragonEatingDonut_final_retopo.gif">
+                <img id="eatIcons" src="./Icons/animIcons/button_anim_donut.png" alt="Botón">
             </button>
-            <button class="eatB  appleButton">
-                <img id="eatIcons" src="./Icons/apple_pixel.png" alt="Botón">
+            <button class="eatB appleButton" data-gif-src="./animations/dragonEatingApple_final_retopo.gif">
+                <img id="eatIcons" src="./Icons/animIcons/button_anim_apple.png" alt="Botón">
             </button>
-            <button class="eatB  meatballButton">
-                <img id="eatIcons" src="./Icons/meatball.png" alt="Botón">
+            <button class="eatB meatballButton" data-gif-src="./animations/dragonEatingMeatBall_final_retopo.gif">
+                <img id="eatIcons" src="./Icons/animIcons/button_anim_meatball.png" alt="Botón">
             </button>
         </div>
 
@@ -29,20 +29,36 @@
     <div class="color topRight">
         <h2 class="rightText">Play</h2>
         <div class="playButtons">
-            <button>
-                <img id="playIcons" src="./Icons/game_controller.png" alt="">
+            <button class="eatB controllerButton" data-gif-src="./animations/dragonPlayVideogames_final_retopo.gif">
+                <img id="playIcons" src="./Icons/animIcons/button_anim_videogame.png" alt="">
             </button>
-            <button>
-                <img id="playIcons" src="./Icons/rubik's_cube.png" alt="">
+            <button class="eatB rubikButton" data-gif-src="./animations/dragonPlayRubik_final_retopo.gif">
+                <img id="playIcons" src="./Icons/animIcons/button_anim_rubik.png" alt="">
             </button>
 
         </div>
     </div>
     <div class="color downLeft">
         <h2 class="leftText">Fight</h2>
+        <div class="fightButtons">
+            <button class="eatB glovesButton" data-gif-src="./animations/dragonAttackBoxing_final_retopo.gif">
+                <img id="fightIcons" src="./Icons/animIcons/button_anim_boxing.png" alt="">
+            </button>
+            <button class="eatB fireballButton" data-gif-src="./animations/dragonAttackFire_final_retopo.gif">
+                <img id="fightIcons" src="./Icons/animIcons/button_anim_fireball.png" alt="">
+            </button>
+        </div>
     </div>
     <div class="color downRight">
         <h2 class="rightText">Sleep</h2>
+        <div class="restButtons">
+            <button class="eatB bedButton" data-gif-src="./animations/dragonSleepRest.gif">
+                <img id="restIcons" src="./Icons/animIcons/button_anim_sleep.png" alt="">
+            </button>
+            <button class="eatB napButton" data-gif-src="./animations/dragonSleepNap.gif">
+                <img id="restIcons" src="./Icons/animIcons/button_anim_nap.png" alt="">
+            </button>
+        </div>
     </div>
     <img id="mark" src="./Icons/mark.png" alt="">
     <img id="idles" src="./animations/dragonInitialIde.gif" alt="">
